# conex-generator

./: .gitignore  .stestr.conf  Jenkinsfile  LICENSE  README.md  analysis_histogram.py  fit_gaisser_hillas.py  inference_fitdata.py  main.py  make_data.py  matplotlibrc  new_model.py  old.py  old_model.py  plot_correlation.py  plot_gaisser_hillas.py  plot_uncertainty_bounds.py  process_data.py  requirements.txt  setup.cfg  test-requirements.txt  test.py  tox.ini  training_all.py  training_random.py  training_reverse.py  xmax_distribution.py
src/: __init__.py  deep_config.py
src/analysis/: __init__.py  gaisser_hillas_fit.py  lr_fit.py  running_mean.py
src/analysis/histogram/: __init__.py  chi_square.py  compare_correlation.py  compare_histogram_1d.py  generators.py  wasserstein_distance.py
src/analysis/xmax/: __init__.py  gaisser_hillas_fit.py
src/data/: __init__.py  caching.py  clear_run.py  config.py  path.py
src/data/interim/: __init__.py  align_run.py  clear_run.py  memorymap_run.py  merge_run.py  path.py
src/data/json/: config.json  jsontonumpy.py  mergejson.py
src/data/processed/: __init__.py  clear_run.py  load_data.py  path.py
src/data/random/: __init__.py  dataset.py
src/data/raw/: __init__.py  convert_run.py  (+3 more)
src/models/: __init__.py  deep_api.py  path.py
src/plot/: __init__.py  correlation.py  gaisser_hillas.py  uncertainty_bounds.py
src/reports/: __init__.py  path.py
src/steering/: __init__.py  path.py
src/tests/: test_unit_model.py
src/utils/: __init__.py  _log.py  byte_string_to_number.py  log.py  path.py  telegram.py  timestamp.py
(+56 files in other folders)
