# -*- coding: utf-8 -*-
[metadata]
name = conex-generator
summary = Generative Neural Network Architecture for Simulation of Extensive Air Showers
description-file =
    README.md
author = Marcel Köpke, KIT/IKP
author-email = marcel.koepke@kit.edu
version = 0.0.1
license = BSD-3-Clause
home-page = https://github.com/deephdc/conex-generator
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    conex-generator

[entry_points]

deepaas.v2.model = 
    conex-generator = src.models.deep_api

